arreglé el tamaño de la imagen

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -662,3 +662,13 @@ section {
         display: flex !important;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .teacher-img img {
+        max-width: 100% !important; 
+        height: auto !important;   
+        display: block;
+        margin: 0 auto;             
+
+}
+}
