--- a/styles/styles.css
+++ b/styles/styles.css
@@ -544,5 +544,13 @@ footer .copyright h5 {
     display: flex !important;
   }
 }
+@media screen and (max-width: 768px) {
+  .teacher-img img {
+    max-width: 100% !important;
+    height: auto !important;
+    display: block;
+    margin: 0 auto;
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
