--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -672,3 +672,11 @@ section {
 
 }
 }
+
+.img-footer  {
+    width: 250px;
+    height: auto;
+    object-fit: contain;
+    border-radius: 45%;
+    margin-left:500px
+}
